// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotFound component test renders as expected 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <Component>
    Not Found
  </Component>
</Component>
`;

exports[`NotFound renders without crashing 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <Text>
    Not Found
  </Text>
</View>
`;
